--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,140 @@
-body {
-  height: 100vh;
+html {
+  scroll-behavior: smooth;
+}
+
+.btn:focus, .btn:active {
+  outline: none !important;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+button:focus {
+  outline: none !important;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+body h1 {
+  font-family: Heebo, sans-serif;
+  font-weight: 700;
+  font-size: 3.5rem;
+  color: white;
+}
+
+body h2 {
+  font-family: Heebo, sans-serif;
+  font-weight: 700;
+  font-size: 1.8rem;
+  color: white;
+}
+
+body #plogo {
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
+body h3 {
+  font-family: Heebo, sans-serif;
+  font-weight: 300;
+  font-size: 1.8rem;
+  color: white;
+}
+
+body p {
+  font-family: Arial Rounded MT Bold, sans-serif;
+  font-weight: 700;
+  font-size: 4rem;
+  color: #0FBE00;
+}
+
+.navbar-custom {
+  background-color: #131313;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  border-radius: 10px;
+  font-family: Heebo, sans-serif;
+  font-weight: 500;
+  height: 50px;
+  z-index: 100;
+}
+
+.navbar-custom .nav-logo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
-body img {
+.navbar-custom .navbar-toggler-icon {
+  background-image: "assets/Menu-Toggle.png" !important;
+}
+
+.navbar-custom a {
+  color: #0FBE00;
+}
+
+.navbar-custom li:hover {
+  background-color: #E1E1E1;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.navbar-custom a:focus {
+  color: #0FBE00;
+}
+
+.navbar-collapse {
+  border-radius: 10px;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+@media only screen and (max-width: 768px) {
+  .navbar-collapse {
+    background-color: #131313;
+    margin-top: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  #logo {
+    margin-top: -3px;
+  }
+}
+
+.navbar-social {
+  background-color: #131313;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  border-radius: 10px;
   height: 50px;
+  width: 190px;
+}
+
+.navbar-social li:hover {
+  background-color: #E1E1E1;
+  border-radius: 5px;
+}
+
+.page-heading {
+  margin: 50px;
+  margin-top: 125px;
+}
+
+.gain-loss {
+  margin-left: 50px;
+}
+
+.gain-loss h2 {
+  padding-bottom: 15px;
+}
+
+.gain-loss p {
+  line-height: 4rem;
 }
 /*# sourceMappingURL=main.css.map */
