--- a/css/main.scss
+++ b/css/main.scss
@@ -108,17 +108,13 @@ body {
     }
 
     li:hover {
-        background-color: color(nav-hover);
+        background-color: color(accent);
         border-radius: 5px;
         width: 100%;
     }
 
     a:hover {
-        color: color(black);
-    }
-
-    a:focus {
-        color: color(accent);
+        color: color(nav-bg);
     }
 }
 
