--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ body #plogo {
 body h3 {
   font-family: Heebo, sans-serif;
   font-weight: 300;
-  font-size: 2.5rem;
+  font-size: 2rem;
   color: white;
 }
 
@@ -202,16 +202,97 @@ body h5 {
   color: #C40000;
 }
 
-.todays-news h2 {
-  margin-left: 50px;
+.todays-news {
+  margin-top: 50px;
 }
 
-.todays-news .news-block {
+.todays-news h2 {
+  margin-left: 50px;
+  padding-bottom: 15px;
+}
+
+.todays-news .news-stories {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 50px;
+  margin-bottom: 75px;
+}
+
+.todays-news .news-stories #left-column, .todays-news .news-stories #right-column {
+  width: 45%;
+}
+
+.todays-news .news-stories #right-column {
+  margin-right: 75px;
+}
+
+.todays-news .news-stories .news-block {
   background-color: #131313;
-  width: 30%;
-  height: 100px;
-  margin: 20px;
+  height: 125px;
+  margin-right: 20px;
+  margin-bottom: 20px;
   border-radius: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.todays-news .news-stories .news-block .article-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 25px;
+}
+
+.todays-news .news-stories .news-block .article-info h2 {
+  font-size: 1.25rem;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+}
+
+.todays-news .news-stories .news-block .article-info p {
+  font-family: Heebo, sans-serif;
+  font-size: .75rem;
+  font-weight: 300;
+  color: #b6b6b6;
+  margin: 0;
+}
+
+.todays-news .news-stories .news-block .article-info .outlet-logo img {
+  height: 15px;
+}
+
+.todays-news .news-stories .news-block .article-image {
+  margin-right: 20px;
+  padding-left: 25px;
+}
+
+.todays-news .news-stories .news-block .article-image img {
+  height: 95px;
+  border-radius: 10px;
 }
 
 #portfolio-header {
@@ -320,18 +401,122 @@ body h5 {
   color: white;
 }
 
+.modal-content .modal-body .position-type .dropdown-item:hover, .modal-content .modal-body .position-name .dropdown-item:hover, .modal-content .modal-body .position-size .dropdown-item:hover {
+  color: white;
+  background-color: #0FBE00;
+}
+
 .modal-content .modal-body .position-size {
   margin-bottom: 25px;
+}
+
+.modal-content .modal-body .estimated-value {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal-content .modal-body .estimated-value h2 {
+  font-size: 1.25rem;
+  font-weight: 500;
 }
 
 .modal-content .modal-footer {
   background-color: #010212;
   color: white;
   border-top: 0 none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .modal-content .modal-footer #button-submit {
-  background-color: #0FBE00;
+  border: 2px white solid;
+  background-color: none;
+  color: white;
   font-weight: 500;
+  font-size: 1.5rem;
+  width: 60%;
+  height: 50px;
+  margin-bottom: 50px;
+}
+
+.modal-content .modal-footer #button-submit:hover {
+  background-color: white;
+  color: #131313;
+}
+
+.portfolio-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 10%;
+  margin-bottom: 75px;
+}
+
+.portfolio-content .holding-group {
+  margin-bottom: 50px;
+}
+
+.portfolio-content .holding-group .holding-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #131313;
+  border-radius: 10px;
+  padding: 10px;
+  padding-top: 13px;
+  margin-top: 15px;
+  width: 60%;
+}
+
+.portfolio-content .holding-group .holding-item h4 {
+  margin: 0;
+  margin-left: 25px;
+}
+
+.portfolio-content .holding-group .holding-item p {
+  font-family: Heebo, sans-serif;
+  font-size: 1rem;
+  color: white;
+  font-weight: 300;
+  margin: 0;
+}
+
+.portfolio-content .holding-group .holding-item i {
+  color: white;
+  font-size: 1.5rem;
+  margin-right: 25px;
+}
+
+.portfolio-content .holding-group .holding-item:hover i {
+  color: #0FBE00;
 }
 /*# sourceMappingURL=main.css.map */
