--- a/css/main.scss
+++ b/css/main.scss
@@ -61,7 +61,7 @@ body {
     h3 {
         font-family: font(heebo);
         font-weight: 300;
-        font-size: 2.5rem;
+        font-size: 2rem;
         color: white;
     }
 
@@ -212,17 +212,82 @@ body {
 }
 
 .todays-news {
+
+    margin-top: 50px;
     h2 {
         margin-left: 50px;
+        padding-bottom: 15px;
     }
 
-    .news-block {
-        background-color: color(nav-bg);
-        width: 30%;
-        height: 100px;
-        margin: 20px;
-        border-radius: 15px;
+    .news-stories {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-left: 50px;
+        margin-bottom: 75px;
+        
+        #left-column, #right-column {
+            width: 45%;
+        }
+
+        #right-column {
+            margin-right: 75px;
+        }
+
+        .news-block {
+            background-color: color(nav-bg);
+            height: 125px;
+            margin-right: 20px;
+            margin-bottom: 20px;
+            border-radius: 15px;
+
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+
+            .article-info {
+
+                display: flex;
+                flex-direction: column;
+                margin-left: 25px;
+
+                h2 {
+                    font-size: 1.25rem;
+                    font-weight: 500;
+                    margin: 0;
+                    padding: 0;
+                }
+
+                p {
+                    font-family: font(heebo);
+                    font-size: .75rem;
+                    font-weight: 300;
+                    color: rgb(182, 182, 182);
+                    margin: 0;
+                }
+
+                .outlet-logo {
+                    img {
+                        height: 15px;
+                    }
+                }
+            }
+
+            .article-image {
+
+                margin-right: 20px;
+                padding-left: 25px;
+
+                img {
+                    height: 95px;
+                    border-radius: 10px;
+                }
+               
+            }
+        }
     }
+
 }
 
 #portfolio-header {
@@ -306,10 +371,28 @@ body {
             .dropdown-item {
                 color: white;
             }
+
+            .dropdown-item:hover {
+                color: white;
+                background-color: color(accent);
+            }
         }
 
         .position-size {
             margin-bottom: 25px;
+        }
+
+        .estimated-value {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+
+            h2 {
+                font-size: 1.25rem;
+                font-weight: 500;
+            }
         }
     }
 
@@ -317,10 +400,72 @@ body {
         background-color: color(background);
         color: white;
         border-top: 0 none;
+        display: flex;
+        justify-content: center;
 
         #button-submit {
-            background-color: color(accent);
+            border: 2px white solid;
+            background-color: none;
+            color: white;
             font-weight: 500;
+            font-size: 1.5rem;
+            width: 60%;
+            height: 50px;
+            margin-bottom: 50px;
+        }
+
+        #button-submit:hover {
+            background-color: white;
+            color: color(nav-bg);
+        }
+    }
+}
+
+.portfolio-content {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10%;
+    margin-bottom: 75px;
+
+    .holding-group {
+        margin-bottom: 50px;
+        .holding-item {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+
+            background-color: color(nav-bg);
+            border-radius: 10px;
+            padding: 10px;
+            padding-top: 13px;
+            margin-top: 15px;
+            width: 60%;
+
+            h4 {
+                margin: 0;
+                margin-left: 25px;
+            }
+
+            p {
+                font-family: font(heebo);
+                font-size: 1rem;
+                color: white;
+                font-weight: 300;
+                margin: 0;
+            }
+
+            i {
+                color: white;
+                font-size: 1.5rem;
+                margin-right: 25px;
+            }
+        }
+
+        .holding-item:hover {
+            i {
+                color: color(accent);
+            }
         }
     }
 }
