--- a/css/main.scss
+++ b/css/main.scss
@@ -256,7 +256,8 @@ body {
                     font-size: 1.25rem;
                     font-weight: 500;
                     margin: 0;
-                    padding: 0;
+                    padding-top: 5px;
+                    padding-bottom: 5px;
                 }
 
                 p {
