--- a/css/main.scss
+++ b/css/main.scss
@@ -65,7 +65,7 @@ body {
         color: white;
     }
 
-    p {
+    #digits {
         font-family: font(calistoga);
         font-weight: 300;
         font-size: 4rem;
