--- a/css/main.scss
+++ b/css/main.scss
@@ -181,17 +181,19 @@ body {
     .gain-loss {
         margin-bottom: 50px;
     }
+
     .todays-news {
         .news-stories {
+            display: flex;
             flex-direction: column;
             justify-content: center;
-        }
-
-        .news-block {
-            flex-direction: column;
-            justify-content: center;
+    
+            #left-column, #right-column {
+                width: 60%;
+            }
         }
     }
+    
 }
 
 .gain-loss {
@@ -326,6 +328,51 @@ body {
         }
     }
 
+}
+
+@media only screen and (max-width: 1100px) {
+    .market-data {
+        flex-direction: column;
+        justify-content: center;
+        .left-web {
+            .gain-loss {
+                #digits {
+                    text-align: center;
+                }
+            }
+        }
+        .right-web {
+            margin-right: 0;
+            .top-movers, .bottom-movers {
+                .tile-group {
+                    justify-content: center;
+                }
+            }
+        }
+    }
+
+    .gain-loss {
+        margin-bottom: 50px;
+    }
+
+    .todays-news {
+        .news-stories {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+    
+            #left-column, #right-column {
+                width: 60%;
+                min-width: 500px;
+            }
+
+            #right-column {
+                margin-right: 0px;
+            }
+        }
+    }
+    
 }
 
 #portfolio-header {
